--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     
     <!-- ✅ Your custom profile image as favicon -->
-    <link rel="icon" type="image/jpeg" href="/public/profile.jpg" />
+    <link rel="icon" type="image/jpeg" href="/arya-favicon.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aryan Singh Jadaun - Portfolio</title>
