--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     
-    <!-- ✅ Your custom profile image as favicon -->
-    <link rel="icon" type="image/jpeg" href="/arya-favicon.jpg" />
+    <link rel="icon" href="/arya-favicon.jpg" type="image/jpeg" />
+    <link rel="shortcut icon" href="/arya-favicon.jpg" type="image/jpeg" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aryan Singh Jadaun - Portfolio</title>
