--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- ✅ Favicon with version to break cache -->
-    <link rel="icon" type="image/jpeg" href="/arya-favicon.jpg?v=4" />
+    <link rel="icon" type="image/jpeg" href="/arya-favicon.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aryan Singh Jadaun - Portfolio</title>
