--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <!-- ✅ Favicon with version to break cache -->
-    <link rel="icon" type="image/jpeg" href="/arya-favicon.jpg" />
+    <link rel="icon" href="https://raw.githubusercontent.com/jadaunaryansingh/Portfolio/master/public/arya-favicon.jpg" type="image/jpeg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aryan Singh Jadaun - Portfolio</title>
